# itk_clear

./: .env  .env.example  .gitignore  Dockerfile  ___content.py  alembic.ini  main.py  pyproject.toml  pyrightconfig.json  requirements.txt  sandbox.py
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 1384eb510cbf_.py  13dc4109d255_.py  33518d33eb97_.py  7c178fb5854e_.py  9f22cf16e154_.py  c2f08b44d468_.py  c858be69fee4_.py
src/: config.py
src/application/ports/: inbox_repo.py  order_repo.py  outbox_repo.py  uow.py
src/application/usecases/: create_order.py  get_order.py  payment_callback.py  shipment_event.py
src/core/: config.py
src/domain/: exceptions.py  inbox.py  models.py  order.py  outbox.py
src/external_api/: api_router_template.py  capashino_api.py
src/infrastructure/: clients.py  database.py  messaging.py  orm_models.py  repositories.py  uow.py
src/infrastructure/bootstrap/: background.py  database.py  kafka.py  monitoring.py
src/infrastructure/clients/: catalog.py  notify.py  payment.py
src/infrastructure/models/: __init__.py  inbox.py  order.py  outbox.py
src/infrastructure/repos/: inbox.py  order.py  outbox.py
src/presentation/: app.py  dependencies.py  kafka_consumer.py  lifespan.py  middleware.py  routes.py  schemas.py
src/presentation/middleware/: request_id_middleware.py
src/presentation/routes/: callbacks.py  orders.py
src/presentation/schemas/: callback.py  order.py
src/utils/: __init__.py  context_vars.py  exceptions.py  logger.py  logs_endpoint.py  request_builder.py
src/utils/logger/: __init__.py  (+3 more)
